--- a/.env.sample
+++ b/.env.sample
@@ -17,7 +17,12 @@ LETS_ENCRYPT=nginx-letsencrypt
 # Your external IP address
 #
 IP=0.0.0.0
-IPv6=::/0
+IPV6=::/0
+
+#
+# Enable IPv6 on web proxy
+#
+ENABLE_IPV6=false
 
 #
 # Default Network
