--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,12 @@ services:
     container_name: ${NGINX_WEB:-nginx-web}
     restart: always
     ports:
-      - "${IP:-0.0.0.0}:80:80"
-      - "${IP:-0.0.0.0}:443:443"
-      - "${IPv6:-::/0}:80:80"
-      - "${IPv6:-::/0}:443:443"
+      - "80:80"
+      - "443:443"
+      #- "${IP:-0.0.0.0}:80:80"
+      #- "${IP:-0.0.0.0}:443:443"
+#      - "${IPV6:-::/0}:80:80"
+#      - "${IPV6:-::/0}:443:443"
     volumes:
       - ${NGINX_FILES_PATH:-./data}/conf.d:/etc/nginx/conf.d
       - ${NGINX_FILES_PATH:-./data}/vhost.d:/etc/nginx/vhost.d
@@ -18,7 +20,7 @@ services:
       - ${NGINX_FILES_PATH:-./data}/certs:/etc/nginx/certs:ro
       - ${NGINX_FILES_PATH:-./data}/htpasswd:/etc/nginx/htpasswd:ro
     environment:
-      ENABLE_IPV6: ${ENABLE_IPV6:-true}
+      ENABLE_IPV6: ${ENABLE_IPV6:-false}
     logging:
       options:
         max-size: ${NGINX_WEB_LOG_MAX_SIZE:-4m}
