--- a/.env
+++ b/.env
@@ -24,33 +24,27 @@ IP=0.0.0.0
 NETWORK=webproxy
 
 #
-# Service Network (Optional)
+# Service Network
 #
-# In case you decide to add a new network to your services containers you can set this
-# network as a SERVICE_NETWORK
-#
-# [WARNING] This setting was built to use our `start.sh` script or in that special case
-#           you could use the docker-composer with our multiple network option, as of:
-#           `docker-compose -f docker-compose-multiple-networks.yml up -d`
-#
+# This is optional in case you decide to add a new network to your services containers
 #SERVICE_NETWORK=webservices
 
 #
 # NGINX file path
 #
-NGINX_FILES_PATH=/var/proxy/nginx/data
+NGINX_FILES_PATH=/opt/nginx/data
 
 #
-# NGINX use special conf files 
+# NGINX use special conf files
 #
-# In case you want to add some special configuration to your NGINX Web Proxy you could 
+# In case you want to add some special configuration to your NGINX Web Proxy you could
 # add your files to ./conf.d/ folder as of sample file 'uploadsize.conf'
 #
 # [WARNING] This setting was built to use our `start.sh`.
 #
 # [WARNING] Once you set this options to true all your files will be copied to data
 #           folder (./data/conf.d). If you decide to remove this special configuration
-#           you must delete your files from data folder ./data/conf.d. 
+#           you must delete your files from data folder ./data/conf.d.
 #
 USE_NGINX_CONF_FILES=true
 
@@ -64,7 +58,7 @@ USE_NGINX_CONF_FILES=true
 #      driver: "json-file"
 #      options:
 #        max-size: "200k"
-#        max-file: "10" 
+#        max-file: "10"
 #
 #NGINX_WEB_LOG_MAX_SIZE=4m
 #NGINX_WEB_LOG_MAX_FILE=10
